<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="4dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_1_label"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_1" />

                <RadioGroup
                    android:id="@+id/radio_group_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radioButtonA"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_1_a" />

                    <RadioButton
                        android:id="@+id/radioButtonB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_1_b" />

                    <RadioButton
                        android:id="@+id/radioButtonC"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_1_c" />

                    <RadioButton
                        android:id="@+id/radioButtonD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_1_d" />
                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_2_label"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_2" />

                <CheckBox
                    android:id="@+id/checkBoxA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_2_a" />

                <CheckBox
                    android:id="@+id/checkBoxB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_2_b" />

                <CheckBox
                    android:id="@+id/checkBoxC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_2_c" />

                <CheckBox
                    android:id="@+id/checkBoxD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_2_d" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_3_label"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_3" />

                <RadioGroup android:id="@+id/radio_group_q3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <RadioButton
                        android:id="@+id/radioButtonFalse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/answer_3_false" />

                    <RadioButton
                        android:id="@+id/radioButtonTrue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/answer_3_true" />
                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">
                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_4_label"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_4" />

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit" />
    </LinearLayout>
</ScrollView>